[project]
name = "hatchet-mcp"
version = "0.1.0"
description = "Durable AI agents with LangGraph + Hatchet"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.4.0",
    "langgraph-cli[inmem]>=0.1.0",
    "langgraph-sdk>=0.1.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "hatchet-sdk>=1.33.0",
    "python-dotenv>=1.1.0",
    "httpx>=0.28.0",
    "pymupdf>=1.25.0",
    "chromadb>=1.5.0,<1.6.0",
    "kubernetes>=31.0.0",
    "langchain-voyageai>=0.2.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
]
server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]
postgres = [
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
